--- a/css/styles.css
+++ b/css/styles.css
@@ -19,29 +19,45 @@ body {
     font-family: var(--primary-font);
     color: var(--slate);
     background-color: var(--white);
-    width: 1440px;
-    height: 2592px;
-    margin: 0;
-    padding: 0;
-    width: 1440px;
-    height: 2592px;
 }
 
+/** ---------------------Reset-----------------**/
+
 h1, h2, h3, h4, h5,h6, p {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 ul {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
+  margin: 0;
+  padding: 0;
 }
 
-.section {
-    padding-top: 120px;
+img {
+    display: block;
+
+}
+
+.container {
+    width: 1158px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.reviews{
+    padding-top: 60px;
     padding-bottom: 120px;
+}
+
+.benefits {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.benefits-footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .list {
@@ -70,21 +86,22 @@ ul {
 }
 
 /** ------------------HEADER----------------- */
-
-.header  {
-    width: 1440px;
-    height: 72px;
-    flex-shrink: 0;
-    border-bottom: 1px solid var(--cornflower, #E7E9FC);
-    background: var(--white, #FFF);
-    margin: 0;
-    padding: 0; 
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.header_container {
+    display: flex;
+    align-items: center;
     justify-content: space-between;
-        align-items: center;
-    
 }
 
-
+.header-navigation {
+    display: flex;
+    align-items: center;
+}
 
 .header-logo {
     font-family: var(--logo-font);
@@ -94,32 +111,17 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--iris);
-
-
-    }
-
-    header-navigation {
-        display: inline-flex;
-            align-items: flex-start;
-            gap: 40px;
-            margin: 24px 832px 24px 347px;
-            width: 261px;
-            height: 24px;
-    }
-
-
+    margin-right: 76px;
+  }
 
 .header-logo-span {
     color: var(--navyblue);
-    display: flex;
-        width: 71px;
 }
 
 .navigation-list {
-    display: inline-flex;
-    align-items: flex-start;
-    gap: 40px;}
-
+    display: flex;
+    gap: 40px;
+}
 
 .navigation-list-link {
     font-weight: 500;
@@ -127,6 +129,7 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--navyblue);
+    padding: 24px 0;
 }
 
 .navigation-list-link:hover, .navigation-list-link:focus {
@@ -141,21 +144,15 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--slate);
-
-    
+    display: flex;
 }
 
 .header-address-list:hover, .header-address-list:focus {
     color: var(--ocean);
 }
 
-.header .container {
-    display: flex;
-    width: 1440px;
-    height: 72px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
+.header-address-item {
+margin-left: 40px;
 }
 
 /*! ------------------------section-one------------*/
@@ -163,6 +160,8 @@ ul {
 
 .section-one {
     background-color: var(--navyblue);
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 .section-one-title {
@@ -171,6 +170,9 @@ ul {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--white);
+    max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .section-one-btn {
@@ -182,6 +184,14 @@ ul {
     letter-spacing: 0.04em;
     color: var(--white);
     cursor: pointer;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    border: none;
+    margin-top: 48px;
 }
 
 .section-one-btn:hover, section-one-btn:focus{
@@ -205,6 +215,20 @@ ul {
     color: var(--slate);
 }
 
+.section-two-list {
+    display: flex;
+    gap: 24px;
+    justify-content: space-between;
+}
+    
+.title-general {
+    margin-bottom: 8px;
+}
+
+.section-two-element {
+    width: calc((100% - 3 * 24px) / 4);
+}
+
 /*!------------------------section-three-------------------*/
 
 .section-three-title {
@@ -213,8 +237,19 @@ ul {
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: var(--navyblue)
-    ;
+    color: var(--navyblue);
+    margin-bottom: 72px;
+}
+
+.section-three-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.section-three-element {
+    max-width: calc((100% - 3 * 24px) / 3);
 }
 
 /*!------------------------section-four------------------*/
@@ -223,8 +258,18 @@ ul {
     background-color: var(--cloud);
 }
 
+.section-four-list {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    border-radius: 0px 0px 4px 4px;
+    gap: 24px;
+}
+
 .section-four-item {
-background-color: var(--white);
+    background-color: var(--white);
+    text-align: center;
+    flex-basis: calc((100% - 3 * 24px) / 4);
 }
 
 .section-four-title {
@@ -234,6 +279,11 @@ background-color: var(--white);
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--navyblue);
+    margin-bottom: 72px;
+}
+
+.container-title {
+    padding: 32px 16px 32px;
 }
 
 /*!------------------------footer-------------------*/
@@ -260,10 +310,27 @@ background-color: var(--white);
     line-height: 1.5;
     color: var(--cloud);
     letter-spacing: 0.02em;
+    max-width: 264px;
+}
+
+.footer-logo-link {
+    display: inline-block;
+    margin-bottom: 16px;
+    max-width: 264px;
 }
 
 /*!------------------------section--portfolio-------------------*/
 
+.portfolio {
+    padding: 96px 0 120px 0;
+}
+
+.portfolio-menu-list {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    margin-bottom: 72px;
+}
 .portfolio-menu-item-btn {
     font-family: var(--primary-font);
     font-weight: 500;
@@ -274,11 +341,37 @@ background-color: var(--white);
     background-color: var(--cloud);
     text-align: center;
     cursor: pointer;
+    padding: 12px 24px 12px;
+    border-radius: 4px;
+    border: 1px solid var(--cornflower, #E7E9FC);
 }
 
-.portfolio-menu-item-btn:hover, .portfolio-menu-item-btn:focus {
+.portfolio-menu-item-btn:hover, 
+.portfolio-menu-item-btn:focus {
     color: var(--white);
     background-color: var(--ocean);
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    row-gap: 48px;
+    justify-content: center;
+}
+
+.portfolio-item {
+border: 0.5px solid var(--cloud, #F4F4FD);
+width: calc((100% - 2 * 24px) / 3);
+}
+
+.portfolio-item-img {
+    object-fit: cover;
+}
+.portfolio-item-card {
+padding: 32px 16px;
+border: 1px solid #e7e9fc;
+border-top:none;
 }
 
 .portfolio-item-title {
@@ -287,4 +380,5 @@ background-color: var(--white);
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--navyblue);
+    margin-top: 8px;
 }
