--- a/css/styles.css
+++ b/css/styles.css
@@ -222,6 +222,10 @@ margin-left: 40px;
 
 /*!------------------------section-three-------------------*/
 
+.section-three {
+    padding-bottom: 120px;
+}
+
 .section-three-title {
     font-size: 36px;
     line-height: 1.11;
@@ -262,6 +266,7 @@ margin-left: 40px;
     background-color: var(--white);
     text-align: center;
     flex-basis: calc((100% - 3 * 24px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .section-four-title {
@@ -275,7 +280,7 @@ margin-left: 40px;
 }
 
 .container-title {
-    padding: 32px 16px 32px;
+    padding: 32px 0;
 }
 
 /*!------------------------footer-------------------*/
